--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div data-controller="hello">
-      <input data-hello-target="name" type="text">
-      <button data-action="click->hello#greet">Greet</button>
+    <div data-controller="wordle">
+      <div class="word-letters" data-wordle-target="letters">
+        <!-- Five input boxes to accept letter guesses -->
+        <input type="text"  data-action="keyup->wordle#handleEvent" maxlength="1">
+        <input type="text" data-wordle-target="letter" data-action="keyup->wordle#handleEvent" maxlength="1">
+        <input type="text" data-wordle-target="letter" data-action="keyup->wordle#handleEvent"  maxlength="1">
+        <input type="text" data-wordle-target="letter" data-action="keyup->wordle#handleEvent"  maxlength="1">
+        <input type="text" data-wordle-target="letter" data-action="keyup->wordle#handleEvent"  maxlength="1">
+      </div>
     </div>
-
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
